<resources>
    <string name="app_name">PhilantroLink</string>
    <string name="philantrolink">PhilantroLink</string>
    <string name="get_started">Get Started →</string>
    <string name="everything_nyou_need_nis_here">Everything\nyou need\nis here...</string>
    <string name="logo">logo</string>
    <string name="don_t_have_an_account">Don\'t Have<font color="#FF000000"> an Account?</font> <font color="#0096FF">Sign up</font></string>
    <string name="forgot_password"><font color="#0096FF">Forgot Password?</font></string>
    <string name="login">Login</string>
    <string name="terms_and_conditions">I have read and acce<font color="#FF000000">pt the</font> <font color="#0096FF">Terms and Conditions</font></string>
    <string name="already_have_an_account_log_in">Already have an<font color="#FF000000"> account?</font> <font color="#0096FF">Log in</font></string>
</resources>