<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wpbg"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/philantrolink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="80dp"
        android:layout_marginStart="40dp"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/everything_nyou_need_nis_here"
        android:layout_marginTop="180dp"
        android:textColor="@color/white"
        android:layout_marginStart="40dp"
        android:textSize="40sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/GetStartedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background"
        android:foreground="@drawable/button_border"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</LinearLayout>