<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign in to PhilantroLink"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/Email"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:padding="12dp"
        android:layout_gravity="center_horizontal"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_bg"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:padding="12dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:background="@drawable/edittext_bg"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/ForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="75dp"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:clickable="true"
        android:onClick="onForgotPasswordClicked" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="Login"
        android:background="@drawable/button_background2"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="or"
        android:textColor="@color/black"
        android:clickable="true"
        />


    <Button
        android:id="@+id/GoogleLoginButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/googlelogo"
        android:text="Continue with Google"
        android:textAllCaps="false"
        android:textColor="@android:color/black" />

    <View
        android:layout_width="250dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/DontHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:clickable="true"
        android:onClick="onSignUpClicked" />




</LinearLayout>