<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Be Part of PhilantroLink"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/regFirstName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:hint="Firstname"
        android:inputType="text"
        android:background="@drawable/edittext_bg"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/regLastName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:hint="Lastname"
        android:inputType="text"
        android:background="@drawable/edittext_bg"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/regContact"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:hint="Contact Number"
        android:inputType="number"
        android:background="@drawable/edittext_bg"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/regUsername"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:hint="Username"
        android:inputType="text"
        android:background="@drawable/edittext_bg"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_bg"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:background="@drawable/edittext_bg"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="Register"
        android:textAllCaps="false"
        android:background="@drawable/button_background2"
        android:textColor="@android:color/white"
         />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:textSize="10sp"
        android:text="@string/terms_and_conditions" />

    <View
        android:layout_width="250dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/AlreadyHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:text="@string/already_have_an_account_log_in"
        android:textColor="@color/black"
        android:clickable="true"
        android:onClick="onLoginClicked" />

</LinearLayout>